--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Service Provider</string>
+    <string name="AlredyHaveAccount"><u>Already have an account login?</u></string>
 </resources>
