--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="menu_logout">Logout</string>
     <string name="menu_rate_us">Rate Us</string>
     <string name="menu_about_us">About Us</string>
+    <string name="add_item">Add Item</string>
 </resources>
